# tonpo-bot

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  README2.md  Readme2.md  __init__.py  alembic.ini  docker-compose.yml  main.py  pyproject.toml  r.env.example  requirements-dev.txt  requirements.txt
bot/: admin.py  callbacks.py  handlers.py  keyboards.py  main.py  middleware.py  registration.py  settings.py  trading.py
config/: config_settings.py  settings.py
core/: __init__.py  exceptions.py  models.py  parser.py  risk_engine.py  validators.py
database/: db_persistence.py  models.py  repositories.py
database/migrations/versions/: 003_telegram_id_bigint.py  004_add_gateway_credentials.py  007_add_payment_requests.py  008_add_gateway_account_id.py  009_add_system_metrics.py
gateway_client/: __init__.py  adapter.py  client.py
services/: monitoring.py  mt5_manager.py  payment.py  subscription.py  trade_executor.py
utils/: __init__.py  validators.py
