[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-signal-copier"
version = "2.0.0"
description = "Telegram Bot for MetaTrader 5 Trading"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["forex", "trading", "telegram", "bot", "metatrader"]
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot>=22.6",
    "metaapi-cloud-sdk>=29.1.1",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.9",
    "redis>=5.2.1",
    "celery>=5.4.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.4",
]

[project.scripts]
fx-bot = "main:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["fx_signal_copier"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]